# datahub-changeguard-agent

./: .env.example  .gitignore  AGENTS.md  DEMO_SCRIPT.md  LICENSE  README.md  SUBMISSION.md  pyproject.toml
.github/workflows/: ci.yml
docs/: DATAHUB_FEEDBACK.md  DECISIONS.md  EVIDENCE.md  JUDGE_GUIDE.md  PROJECT_STATE.md  PUBLISHING_COPY.md
examples/: context.json  current_schema.json  proposed_schema.json  rename_hints.json
output/agent-context-example/: audit.json  datahub_context.json  dbt_schema.yml  report.html  report.md
output/example/: audit.json  compatibility_view.sql  datahub_context.json  report.html  report.md
skills/datahub-changeguard/: SKILL.md
src/changeguard/: __init__.py  analyzer.py  cli.py  datahub_gateway.py  files.py  generators.py  models.py
tests/: test_agent_context.py  test_analyzer.py  test_generators.py  test_safety.py
video/: build_demo.sh  build_demo_v2.sh  build_demo_v3.sh  captions_v2.srt  captions_v3.srt  record_demo_v3.py  storyboard.html
video/narration/: 02.txt  03.txt  04.txt  05.txt  06.txt  07.txt
video/narration_v3/: 01.txt  02.txt  04.txt  05.txt  06.txt  07.txt
