[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "datahub-changeguard"
version = "0.1.0"
description = "A DataHub-aware agent runtime for reviewing risky schema changes before deployment."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "ChangeGuard Contributors" }]
dependencies = [
  "acryl-datahub==1.6.0.6",
  "datahub-agent-context==1.6.0.14",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9",
  "ruff>=0.12,<1",
]
video = [
  "imageio-ffmpeg==0.6.0",
  "playwright==1.61.0",
]

[project.scripts]
changeguard = "changeguard.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"src/changeguard/generators.py" = ["E501"]
